--- a/config.toml
+++ b/config.toml
@@ -1,1 +1,49 @@
-"theme" = "catppuccin_mocha"
+theme = "catppuccin_mocha"
+# theme = "catppuccin_machiato"
+
+[editor]
+# Show currently open buffers, only when more than one exists.
+bufferline = "multiple"
+# Force the theme to show colors
+true-color = true
+# Highlight all lines with a cursor
+cursorline = true
+auto-save = false
+completion-trigger-len = 1
+color-modes = true
+auto-pairs= true
+# Use relative line numbers
+line-number = "relative"
+# Show a ruler at column 120
+rulers = [120]
+
+[editor.cursor-shape]
+insert = "bar"
+normal = "block"
+select = "underline"
+
+[editor.indent-guides]
+render = true
+character = "▏"
+
+[editor.lsp]
+display-messages = true
+display-inlay-hints = true
+
+[editor.statusline]
+left = ["mode", "spinner", "version-control", "file-name"]
+
+[keys.insert]
+"C-[" = "normal_mode"
+
+[keys.normal]
+# ";" = "repeat_last_motion"
+"A-." = "repeat_last_motion"
+X = ["extend_line_up", "extend_to_line_bounds"]
+A-x = "extend_to_line_bounds"
+"]" = { b = "goto_next_buffer" }
+"[" = { b = "goto_previous_buffer" }
+
+[keys.select]
+X = ["extend_line_up", "extend_to_line_bounds"]
+A-x = "extend_to_line_bounds" # "A-f" = "format"
