--- a/languages.toml
+++ b/languages.toml
@@ -2,3 +2,11 @@
 name = "go"
 auto-format = true
 formatter = { command = "goimports" }
+
+[[language]]
+name = "python"
+language-servers = [ "pyright" ]
+
+[[language]]
+name = "markdown"
+formatter = { command = "dprint", args = ["fmt", "--stdin", "md"]}
