change x to not go to next line if current line empty

--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ bufferline = "multiple"
 # Force the theme to show colors
 true-color = true
 # Highlight all lines with a cursor
-cursorline = true
+# cursorline = true
 auto-save = false
 completion-trigger-len = 1
 color-modes = true
@@ -33,7 +33,9 @@ display-inlay-hints = true
 [editor.statusline]
 left = ["mode", "spinner", "version-control", "file-name", "file-modification-indicator"]
 right = ["diagnostics", "selections", "position", "position-percentage", "file-encoding"]
-
+# mode.normal = "NORMAL"
+# mode.insert = "INSERT"
+# mode.select = "SELECT"
 # Whitespace settings and symbols
 # + (*whiteline) types : when to render
 [editor.whitespace.render]
@@ -61,6 +63,8 @@ X = ["extend_line_up", "extend_to_line_bounds"]
 A-x = "extend_to_line_bounds"
 "]" = { b = "goto_next_buffer" }
 "[" = { b = "goto_previous_buffer" }
+x = ["goto_line_start", "select_mode", "goto_line_end_newline"]
+# X = ["goto_line_start", "select_mode", "goto_line_end_newline"]
 
 [keys.normal.g]
 l = ["collapse_selection", "extend_to_line_end"]
@@ -75,3 +79,5 @@ h = ":set whitespace.render none"
 X = ["extend_line_up", "extend_to_line_bounds"]
 A-x = "extend_to_line_bounds"
 # "A-f" = "format"
+x = "extend_line_below"
+# X = "extend_line_above"
